--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <article>
         <h1>NASA's new Mars mission: These twin satellites could reveal how the Red Planet lost its atmosphere</h1>
-        <div><span class="blue-tag">News</span>By <a href="https://www.space.com/author/sharmila-kuthunur">Sharmila Kuthunur</a> published 3 days ago</div>
-        <p>When you purchase through links on our site, we may earn an affiliate commission. <a href="https://www.space.com/41418-about-us.html#section-affiliate-advertising-disclosure">Here`s how it works.</a></p>
+        <div style="font-size: 12px;"><span class="blue-tag">News</span>By <a href="https://www.space.com/author/sharmila-kuthunur">Sharmila Kuthunur</a> published 3 days ago</div>
+        <p>When you purchase through links on our site, we may earn an affiliate commission. <a href="https://www.space.com/41418-about-us.html#section-affiliate-advertising-disclosure" class="u-black">Here`s how it works.</a></p>
         <img src="assets/satellite.png" alt="satellite image">
         <h2>Mars Set to Receive Dual Attention</h2>
         <p>
