--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div style="height: 50px;"></div>
     <article>
         <h1>NASA's new Mars mission: These twin satellites could reveal how the Red Planet lost its atmosphere</h1>
         <div style="font-size: 12px;"><span class="blue-tag">News</span>By <a href="https://www.space.com/author/sharmila-kuthunur">Sharmila Kuthunur</a> published 3 days ago</div>
@@ -45,5 +46,6 @@
             <a href="https://www.space.com/36277-mars-thick-atmosphere-lost-in-space.html" class="u-black">stripped away the Martian atmosphere</a>, leaving behind a tenuous wisp less than 1% as dense as Earth's.
         </p>
     </article>
+    <div style="height: 50px;"></div>
 </body>
 </html>
